--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,41 +1,9 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: contents;
-  font-size: 2rem;
-}
-
-.topic_grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* replace "n" with the number of columns you want */
-  grid-gap: 20px; /* adjust this value to set the spacing between grid items */
-}
-
-.topic {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  padding: 20px;
-}
-
-.topic img {
-  max-width: 100%;
-  max-height: 100%;
-  margin-bottom: 10px;
-}
-
-.topic h3 {
-  font-size: 1.2rem;
-  margin: 0;
-  text-align: center;
+  gap: 1rem;
+  padding: 2rem;
+  margin: 0 auto;
+  max-width: 800px;
 }
